--- a/src/components/Delivery/DeliveryStatus/StatusSkeleton/StatusSkeleton.module.scss
+++ b/src/components/Delivery/DeliveryStatus/StatusSkeleton/StatusSkeleton.module.scss
@@ -31,4 +31,5 @@
 
 .status__title {
     margin-bottom: 5px;
+    letter-spacing: $mainLetterSpacing;
 }
